# tankBot

./: .gitignore  design.readme  index.html  readme.md  streamingServer.js
CommandMode/: Command Mode.docx  commandMode_control.py
CommandMode/PI_Python/: commandMode_control.py  html_server.py  index.html  utilities.py
CommandMode/PI_Python/ROS/: commandMode_control.py  startup.sh  tank_bot.launch  utilities.py
CommandMode/PI_Python/html/: index.html
CommandMode/PI_Python/templates/: index.html
CommandMode/PI_Python/webstreaming/: startup.sh  tankBot_control.py  webstreaming.py
CommandMode/PI_Python/webstreaming/static/: test.html
CommandMode/PI_Python/webstreaming/static/tankBot/: Arm.pde  Segment.pde  tankBot.pde
CommandMode/PI_Python/webstreaming/templates/: index.html
CommandMode/commandMode/: command.h  commandMode.ino  commandTable.h  config.h  globals.h  software_pwm.h  tankbot.h  tankbot_hardware.h
CommandMode/commandMode_test/: commandMode_test.pde
Examples/: circleDetect.py  colorSync.py  exampleIMU.cpp  testJoystick.py
PiCode/: CMakeLists.txt  CMakeSettings.json
PiCode/src/: Arduino.cpp  Arduino.h  CMakeLists.txt  Comms.cpp  Comms.h  Socket.h  ThreadSafeVar.cpp  ThreadSafeVar.h  commonTypes.cpp  commonTypes.h
PiCode/src/Client/: ScreenControl.cpp  ScreenControl.h
PiCode/src/Ports/: CMakeLists.txt
PiCode/src/Ports/Windows/: Keyboard.cpp  Keyboard.h  Serial.cpp  Serial.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
PiCode/src/TankbotClient/: CMakeLists.txt  TankbotClient.cpp
PiCode/src/TankbotServer/: CMakeLists.txt  TankbotServer.cpp
Socket/SocketTest/: SocketTest.sln
Socket/SocketTest/Debug/: SocketTest.ilk
Socket/SocketTest/SocketTest/: SocketTest.vcxproj  main.cpp
Socket/SocketTest/SocketTest/Debug/: vc142.idb
Socket/SocketTest/SocketTest/Debug/SocketTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SocketTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SocketExamples/Linux/: Socket.cpp  Socket.h
SocketExamples/Windows/: Socket.cpp  Socket.h
armControl/: armControl.ino
inverseKinematics/: Arm.pde  ElbowSegment.pde  inverseKinematics.pde
inverseKinematics/data/: armJoystick.backup  joystick  joystick-copy
inverseKinematics_mouse_/: Arm.pde  ElbowSegment.pde  ShoulderSegment.pde  WristSegment.pde  inverseKinematics_mouse_.pde
laptopArmMaster/: laptopArmMaster.pde
socketControl/: server.js
socketControl/clientApp/: config.xml  ionic.config.json  package-lock.json  package.json
socketControl/clientApp/src/app/: app.module.ts
socketControl/clientApp/src/pages/home/: home.html  home.scss  home.ts
stateMachine/: stateMachine.ino
tankBotHellowWorld/: tankBotHellowWorld.ino
